fix(plugins/plugin-client-common): links in hints in sidecar have low contrast in light themes
part of #7981

--- a/plugins/plugin-client-common/web/scss/components/Hint/PatternFly.scss
+++ b/plugins/plugin-client-common/web/scss/components/Hint/PatternFly.scss
@@ -20,5 +20,9 @@
   @include HintBody {
     font-size: inherit;
     font-family: var(--font-sans-serif);
+
+    a {
+      color: var(--color-base0C);
+    }
   }
 }
